--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,15 @@ body {
   margin: 0 auto;
   font-family: Raleway;
 }
+
+@media screen and (max-width: 600px) {
+  .MuiTypography-root {
+    font-size: 3vw !important;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .css-1jv5mhm-MuiTypography-root {
+    display: none;
+  }
+}
